Upgraded project to C++17 which supports inline variables

--- a/simtest/Makefile
+++ b/simtest/Makefile
@@ -14,10 +14,10 @@ simtest: main.o twoexit.o
 
 main.o: main.cpp *.hpp ../src/*.hpp ../src/pids/*.hpp \
 	$(SIMSENSORS)/parsers/webots/* $(SIMSENSORS)/sensors/* 
-	g++ -Wall -c -I$(ROOT) -I../src main.cpp
+	g++ -std=c++17 -Wall -c -I$(ROOT) -I../src main.cpp
 
 twoexit.o: twoexit.cpp *.hpp
-	g++ -Wall -c -I$(ROOT) -I../src twoexit.cpp
+	g++ -std=c++17 -Wall -c -I$(ROOT) -I../src twoexit.cpp
 
 edit:
 	vim main.cpp
