Updated C++ Standard Among Other Qualtiy of Life Changes

--- a/attic/oldsimtest/Makefile
+++ b/attic/oldsimtest/Makefile
@@ -11,7 +11,7 @@ simtest: main.o
 	g++ -o simtest main.o
 
 main.o: main.cpp $(SIMSENSORS)/parsers/webots/* $(SIMSENSORS)/sensors/* 
-	g++ -Wall -c -I$(ROOT) -I../src main.cpp
+	g++ -std=c++17 -Wall -c -I$(ROOT) -I../src main.cpp
 
 edit:
 	vim main.cpp
